chore: include personalization draft

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Miguel Gonzalez Bolaños
 subtitle:
 email: contact@miguelnge.me
-description: Senior Devops & Cloud Architect
-baseurl: ""
+description: IT professional with a vast experience in cloud and hosting platforms. Mainly focused on public cloud, automation and open source solutions, but with other technical fields’ transversal knowledge. Customer and result focused. New products and solutions tester and enthusiastic.
+baseurl:
 url: "https://miguelnge.me"
 author:
 street_address:
