chore: simplify name plus palette

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site settings
-title: Miguel Gonzalez Bolaños
+title: Miguel Gonzalez
 subtitle:
 email: contact@miguelnge.me
 description: IT professional with a vast experience in cloud and hosting platforms. Mainly focused on public cloud, automation and open source solutions, but with other technical fields’ transversal knowledge. Customer and result focused. New products and solutions tester and enthusiastic.
